@@ -2,7 +2,7 @@ name             = DBIx-Class-Helpers
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 2.00200
+version          = 2.00300
 
 [@Git]
 [@Filter]
@@ -23,7 +23,7 @@ lib = lib
 lib = t/lib
 
 [Prereq]
-DBIx::Class         = 0.08117
+DBIx::Class         = 0.08118
 Sub::Exporter       = 0
 Lingua::EN::Inflect = 0
 Test::More          = 0.88
