@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Change as_virtual_view to just pass through to the cored version, as_subselect_rs
 
 2.00200   2010-02-05 14:15:06 CST6CDT
        - Allow multiple levels for result in namespace for get_namespace_parts
